Modified startup,githubcontroller. repositories and ReposDTO.

--- a/IngmanDevelopment/appsettings.json
+++ b/IngmanDevelopment/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "CovidApi": {
     "BaseUrl": "https://api.covid19api.com/"
+  },
+  "GithubAPI": {
+    "BaseUrl2": "https://api.github.com/"
   }
 }
