--- a/IngmanDevelopment/appsettings.json
+++ b/IngmanDevelopment/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "CovidApi": {
-    "BaseUrl": "https://api.covid19api.com/"
+    "BaseUrl": "https://api.covid19api.com/",
+    "DefaultCountry": "Sweden"
   },
   "GithubAPI": {
     "BaseUrl2": "https://api.github.com/"
