Changed baseurl for api

--- a/IngmanDevelopment/appsettings.json
+++ b/IngmanDevelopment/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "CovidApi": {
-    "BaseUrl": "https://api.covid19api.com/",
+    "BaseUrl": "http://api.covid19api.com/",
     "DefaultCountry": "Sweden"
   },
   "GithubAPI": {
